--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <header>
+      <h3>ROCK | PAPER | SCISSORS</h3>
+      <!-- <h3>Choose Your Destiny</h3> -->
+    </header>
+    <div class="container">
+      <div>
+        <h4>Player: <span id="player-score"></span></h4>
+        <h4>Computer: <span id="computer-score"></span></h4>
+      </div>
+      <section class="btns-container">
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
+        <button class="btn" id="random">Random</button>
+      </section>
+    </div>
+    <div class="result-section">
+      <h4 class="result"></h4>
+      <!-- <button class="btn-reset">Reset</button> -->
+    </div>
+    <footer>agunbiade-ar&copy;2023, Rock-Paper-Scissors</footer>
+
     <script src="./script.js"></script>
   </body>
 </html>
